--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,14 @@
             <version>1.16</version>
         </dependency>
 
+        <!-- Ajax에서 전송한 문자열을 자바객체로 변환해준다.-->
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
