--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,21 @@
             <version>2.13.3</version>
         </dependency>
 
+        <!-- 메일보내기를 위한 라이브러리 -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+        <!-- 메일보내기를 위한 라이브러리 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
